# TGAntiSpamBot

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
ai_client/: __init__.py  service.py  utils.py
ai_client/adapters/: __init__.py  ollama_adapter.py  openai_adapter.py
ai_client/models/: __init__.py  errors.py  request_parts.py
alembic/: env.py
alembic/versions/: 2025_12_16_0905-d47a225ef863_create_chats_table.py  2025_12_16_0911-2d95cf0deb87_create_chats_admins_table.py  2025_12_16_0912-e9d5ca60bc3c_create_users_states_table.py  2025_12_17_0141-cde0b7d69e7e_create_tables.py  2025_12_17_0547-de4519ac09d0_create_tables.py  2025_12_21_0642-84426b4e2ad6_upd_chats_table.py  2025_12_26_0456-1c81ab447ab3_create_tables.py
app/: __init__.py  container.py  monitoring.py  security.py
app/antispam/: __init__.py  dto.py  service.py
app/bot/: __init__.py  bootstrap.py  factory.py  run.py  run_polling.py  run_webhook.py
app/db/: __init__.py  base.py  helper.py
app/services/: __init__.py  chat.py  chat_cached.py  chat_registry.py  user.py
config/: __init__.py  ai_client.py  bot.py  config.py  database.py  logging.py  settings.py
docs/: AI.md  DOCKER.md  ENV.md  MAKE.md  OLLAMA.md  TEST.md  UV.md
logger/: __init__.py  colored_formatter.py
prompts/: __init__.py  moderation_policy.txt  moderation_policy_1.txt  moderation_policy_2.txt  moderation_policy_3.txt
scripts/: ollama_pull_model.sh
utils/: __init__.py  camel_case_to_snake_case.py  db_utils.py  domain.py  timezone_utils.py
(+62 files in other folders)
